@@ -304,6 +304,71 @@ ngx_http_php_content_async_inline_phase(ngx_conf_t *cf, ngx_command_t *cmd, void
 	return NGX_CONF_OK;
 }
 
+char *
+ngx_http_php_log_phase(ngx_conf_t *cf, ngx_command_t *cmd, void *conf)
+{
+	ngx_http_php_main_conf_t *pmcf;
+	ngx_http_php_loc_conf_t *plcf;
+	ngx_str_t *value;
+	ngx_http_php_code_t *code;
+
+	if (cmd->post == NULL) {
+		return NGX_CONF_ERROR;
+	}
+
+	pmcf = ngx_http_conf_get_module_main_conf(cf, ngx_http_php_module);
+	plcf = conf;
+
+	if (plcf->log_handler != NULL){
+		return "is duplicated";
+	}
+
+	value = cf->args->elts;
+
+	code = ngx_http_php_code_from_file(cf->pool, &value[1]);
+	if (code == NGX_CONF_UNSET_PTR){
+		return NGX_CONF_ERROR;
+	}
+
+	plcf->log_code = code;
+	plcf->log_handler = cmd->post;
+	pmcf->enabled_log_handler = 1;
+
+	return NGX_CONF_OK;
+}
+
+char *
+ngx_http_php_log_inline_phase(ngx_conf_t *cf, ngx_command_t *cmd, void *conf)
+{
+	ngx_http_php_main_conf_t *pmcf;
+	ngx_http_php_loc_conf_t *plcf;
+	ngx_str_t *value;
+	ngx_http_php_code_t *code;
+
+	if (cmd->post == NULL) {
+		return NGX_CONF_ERROR;
+	}
+
+	pmcf = ngx_http_conf_get_module_main_conf(cf, ngx_http_php_module);
+	plcf = conf;
+
+	if (plcf->log_handler != NULL){
+		return "is duplicated";
+	}
+
+	value = cf->args->elts;
+
+	code = ngx_http_php_code_from_string(cf->pool, &value[1]);
+	if (code == NGX_CONF_UNSET_PTR){
+		return NGX_CONF_ERROR;
+	}
+
+	plcf->log_inline_code = code;
+	plcf->log_handler = cmd->post;
+	pmcf->enabled_log_handler = 1;
+
+	return NGX_CONF_OK;
+}
 
 #if defined(NDK) && NDK
 
