@@ -34,6 +34,7 @@ typedef struct {
 	unsigned enabled_access_handler:1;
 	unsigned enabled_content_handler:1;
 	unsigned enabled_content_async_handler:1;
+	unsigned enabled_log_handler:1;
 
 	ngx_http_php_state_t *state;
 
@@ -51,11 +52,15 @@ typedef struct {
 	ngx_http_php_code_t *content_code;
 	ngx_http_php_code_t *content_inline_code;
 	ngx_http_php_code_t *content_async_inline_code;
+	ngx_http_php_code_t *log_code;
+	ngx_http_php_code_t *log_inline_code;
 
 	ngx_int_t (*rewrite_handler)(ngx_http_request_t *r);
 	ngx_int_t (*access_handler)(ngx_http_request_t *r);
 	ngx_int_t (*content_handler)(ngx_http_request_t *r);
 	ngx_int_t (*content_async_handler)(ngx_http_request_t *r);
+	ngx_int_t (*log_handler)(ngx_http_request_t *r);
+
 } ngx_http_php_loc_conf_t;
 
 
